tdf#169934 Transparency is lost when applying a duotone filter

regression from
  commit df4873973ed6951ab63c59129226d18055f771fc
  Author: Noel Grandin <noelgrandin@gmail.com>
  Date:   Wed Aug 27 20:25:54 2025 +0200
  simplify Graphic::applyDuotone

Change-Id: I69a3da35b53355488c2d6a1f1288048d4096bc6c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197298
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 0c1df806d965609b46a0c7cec08752c0234b2538)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197319
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>